# gung12

./: .gitignore  LICENSE  README.md  analisis-situacion  gung12.spec  pyproject.toml  requirements.txt
.github/workflows/: release.yml
formvuln/: __init__.py  __main__.py  ai_analyzer.py  analyzer.py  cli.py  engine.py  models.py  parser.py  reporter.py
formvuln/payloads/: __init__.py  cmdi.py  csrf.py  logic.py  nosql.py  open_redirect.py  ssti.py  xss.py
gung12/: __init__.py  __main__.py  ai_analyzer.py  analyzer.py  auth.py  cli.py  engine.py  models.py  parser.py  reporter.py  spa_parser.py  waf_bypass.py
gung12/payloads/: __init__.py  cmdi.py  csrf.py  file_upload.py  htmli.py  idor.py  ldap.py  lfi.py  logic.py  nosql.py  open_redirect.py  sqli.py  ssti.py  xpath.py  xss.py  xxe.py
memoria/: capitulo1_borrador.md  capitulo2_borrador.md  capitulo3_borrador.md  memoria_estructura.md  observaciones_profesor.md  plan_implementacion.md  tfm_copia_actual.md
reportes/: medium_cmdi.html  medium_sqli.html  medium_xss.html
ssti_lab/: app.py
